Added a Create section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,3 +55,13 @@ body {
     font-size: $icon-size;
   }
 }
+
+#create-section {
+  .fa {
+    color: $primary-color;
+    background: #fff;
+    padding: 4px;
+    border-radius: 5px;
+    font-size: $icon-size;
+  }
+}
